--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
         <img src="image/jhankar.png" alt="">
        </div>
   </section>
+  <section class="dream-big">
+      <div class="half-width">
+          <img src="image/jhankar2.png" alt="">
+      </div>
+      <div  class="half-width">
+          <h2>Dream Big</h2>
+          <h3>Become a web developer</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur et amet molestias, sequi maiores ullam reprehenderit excepturi facilis dolores vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, quam?</p>
+          <a class="link-class" target="blank" href="https://www.google.com">Know more</a>
+  </section>
 </body>
 </html>
