--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Mukta:wght@200&family=Oswald:wght@200&family=Poppins:ital,wght@0,200;0,300;0,400;1,200&family=Raleway:ital,wght@1,200&family=Spline+Sans:wght@300&family=The+Nautigal:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <section class="top-banner">
+  <section class="top-banner flexible-containar">
     <div class="half-width">
         <h1>welcome to </h1>
         <h1><span class="orange-color">Sifat-world</span> 2022</h1>
@@ -23,7 +23,7 @@
         <img src="image/jhankar.png" alt="">
        </div>
   </section>
-  <section class="dream-big">
+  <section class="dream-big flexible-containar">
       <div class="half-width">
           <img src="image/jhankar2.png" alt="">
       </div>
@@ -33,5 +33,23 @@
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur et amet molestias, sequi maiores ullam reprehenderit excepturi facilis dolores vitae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, quam?</p>
           <a class="link-class" target="blank" href="https://www.google.com">Know more</a>
   </section>
+  <section class="experience-area">
+    <h1>Experiences</h1>
+    <div class="flexible-containar">
+        <div id="web-dev" class="experience-item">
+            <h2>full stack developer</h2>
+            <h3><span class="orange-color" >2022-present| pro level web developer</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id tempore sunt modi? Assumenda facilis accusamus excepturi similique magnam architecto quibusdam?</p>
+        </div>
+        <div id="full-stack" class="experience-item">
+            <h2>Baby web developer</h2>
+            <h3><span class="orange-color">stay with programming hero</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus repudiandae dignissimos non sapiente nobis dolor dolorum debitis vitae odio praesentium?</p>
+        </div>
+    </div>
+  </section>
+  <footer>
+      <p>sifatcreator999@gmail.com A Candidate of programming hero commiunity</p>
+  </footer>
 </body>
 </html>
